--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "sass": "node-sass --watch resources/sass/app.scss -o public/css --output-style compressed"
   },
   "repository": {
     "type": "git",
