--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "mongoose": "^6.2.7",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "socket.io": "^4.4.1"
   }
 }
