--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "node-sass": "^7.0.1",
     "socket.io": "^4.4.1"
