--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.js & npm run sass",
     "sass": "node-sass --watch resources/sass/app.scss -o public/css --output-style compressed"
   },
   "repository": {
@@ -23,6 +23,8 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "node-sass": "^7.0.1",
+    "nodemailer": "^6.7.3",
+    "parseurl": "^1.3.3",
     "socket.io": "^4.4.1"
   }
 }
