--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "node-sass": "^7.0.1",
+    "nodemailer": "^6.7.3",
     "parseurl": "^1.3.3",
     "socket.io": "^4.4.1"
   }
